# firmware-esp32-exp

./: .clangd  .gitignore  CMakeLists.txt  GEMINI.md  Makefile  README.md  api-docs.yaml  esp_idf_project_configuration.json  sdkconfig.defaults  sdkconfig.defaults.matrixportal-s3-wide  sdkconfig.defaults.tronbyt-s3  sdkconfig.defaults.tronbyt-s3-wide  verify.sh
.github/workflows/: main.yml
boards/: default_16mb.csv  default_8mb.csv
brands/: parrot.cfg  tronbyt.cfg  windytron.cfg
components/assets/: CMakeLists.txt  assets.cpp  assets.h
components/webp_decoder/: CMakeLists.txt  idf_component.yml  webp_decoder.cpp
components/webp_decoder/include/: webp_decoder.h
docs/: branding.md
docs/design/: 012-centralized-tls-fetch.md  013-board-hal.md  014-provisioning.md
main/: CMakeLists.txt  Kconfig.projbuild  board_caps.h  idf_component.yml  main.cpp  touch_control.c  touch_control.cpp  touch_control.h
main/config/: ap.cpp  dns_wrapper.cpp  nvs_handle.h  nvs_settings.cpp  nvs_settings.h
main/config/html/: setup.html  success.html
main/display/: display.cpp  display.h
main/network/: api_validation.cpp  api_validation.h  config_contract.cpp  config_contract.h  handlers.cpp  http_server.cpp  mdns_service.cpp  messages.cpp  messages.h  remote.cpp  sockets.cpp  sockets.h  sta_api.cpp  webp_frame.cpp  webp_frame.h  webui_server.cpp  webui_server.h  wifi.cpp  wifi.h
main/scheduler/: scheduler.cpp  scheduler_fsm.cpp  scheduler_fsm.h
main/startup/: runtime_orchestrator.cpp  runtime_orchestrator.h
main/system/: app_state.cpp  app_state.h  console.cpp  device_temperature.cpp  device_temperature.h  diag_event_ring.cpp  diag_event_ring.h  embedded_tz_db.cpp  event_bus.cpp  event_bus.h  heap_monitor.cpp  heap_monitor.h  ntp.cpp  ota.cpp  ota.h  ota_bundle.cpp  ota_bundle.h  ota_http_upload.cpp  ota_http_upload.h  ota_url_utils.cpp  ota_url_utils.h
main/webp_player/: webp_player.cpp  webp_player.h
resources/: README.md  build.sh
resources/sources/common/config/: config.star
resources/sources/common/error_404/: error_404.star
resources/sources/common/no_connect/: no_connect.star
resources/sources/common/oversize/: oversize.star
resources/sources/parrot/boot/: boot.star
test/host/: CMakeLists.txt  fuzz_json_handlers.cpp  run_tests.sh  test_unit.cpp
tools/: create_bundle.py  generate_assets.py
webui/: index.html  ota.html  settings.html
webui/static/: app.js  style.css
